# cosmic-ext-applet-mounter

./: .gitignore  Applet Description.md  Cargo.toml  Cloud Drive Connections.md  Dependency Installation.md  LICENSE  README.md  Requirements and Specifications.md  Task List Completion Notes.md  Task List.md  Tooltip Review.md  justfile
applet template/: Cargo.toml
applet template/src/: app.rs  main.rs
archive/applet template/: justfile
archive/scripts/: cisco-vpn-start  ua-engr-mount  ua-engr-mount-terminal-stop-all
archive/services/: rclone-ua-box.service  rclone-ua-gdrive.service
debian/: changelog  control  copyright  rules
examples/: controlled_onedriver_online_mount_setup.rs  controlled_rclone_offline_mirror_setup.rs  controlled_rclone_online_mount_setup.rs  controlled_remove_connections.rs  dependency_inventory.rs  flatpak_host_runner_probe.rs  legacy_import_confirm_dry_run.rs  legacy_import_preview.rs
i18n/en/: cosmic_ext_applet_mounter.ftl
packaging/flatpak/: README.md  cargo-sources.json  io.github.uutzinger.cosmic-ext-applet-mounter.GuiPrototype.json  (+2 more)
resources/: app.desktop  app.metainfo.xml
scripts/: cisco-vpn-status  cisco-vpn-stop  cloud-box-onedrive-toggle  cloud-box-onedrive-toggle-terminal  cloud-google-toggle  cloud-google-toggle-terminal  cosmic-ext-applet-mounter-onedrive-auth-helper
services/: rclone-ua-engr.service  rclone-uutzinger-gdrive.service
src/: app.rs  config.rs  controller.rs  diagnostics.rs  i18n.rs  import.rs  lib.rs  main.rs  model.rs  mounts.rs  process.rs  providers.rs  services.rs  sync.rs  theme.rs  vpn.rs
(+4 files in other folders)
