[package]
name = "cosmic-ext-applet-mounter"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Urs Utzinger", "OpenAI Codex"]
license = "MIT"
description = "A COSMIC applet for online mounts and offline storage mirrors"
repository = "https://github.com/uutzinger/cosmic-ext-applet-mounter"

[dependencies]
i18n-embed-fl = "0.10"
rust-embed = "8.11"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.0", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "a991d7bb433f67016c1473e8e4a03691ededd75a"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]

[dev-dependencies]
ron = "0.12"
tempfile = "3"
